environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krgeobuk-dev
  labels:
    name: krgeobuk-dev
    environment: development
